--- a/CMS.tex
+++ b/CMS.tex
@@ -6,7 +6,7 @@ Located at one of the four intersections of the LHC beams, the CMS detector is d
 \label{fig:CMS}
 \end{figure}
 \subsection{Tracking system}
-The tracking system of the CMS detector consists of many layers of silicon pixels and strips. The trajectories of charged particles are reconstructed from the ionisation signal they cause in the silicon. In the magnetic filed these trajectories bend, allowing to determine the momentum of particles. The tracking system has a diameter of $\unit{2.5}{\meter}$ and a length of $\unit{5.8}{\meter}$, corresponding to a geometric coverage of $\vert \eta \vert < $ 2.5. The tracking detector consists, as shown in Figure~\ref{fig:tracker}, of the pixel detector (PIXEL) surrounded by various components of  the silicon strip tracker. 
+The tracking system of the CMS detector consists of many layers of silicon pixels and strips. The trajectories of charged particles are reconstructed from the ionisation signal they cause in the silicon. In the magnetic field these trajectories bend, allowing to determine the momentum of particles. The tracking system has a diameter of $\unit{2.5}{\meter}$ and a length of $\unit{5.8}{\meter}$, corresponding to a geometric coverage of $\vert \eta \vert < $ 2.5. The tracking detector consists, as shown in Figure~\ref{fig:tracker}, of the pixel detector (PIXEL) surrounded by various components of  the silicon strip tracker. 
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.85\textwidth]{plots/CMS/Tracker.png}
