--- a/DAQTrig.tex
+++ b/DAQTrig.tex
@@ -12,7 +12,7 @@ The global trigger collects the information from the global muon and calorimeter
 
 \subsubsection*{Data acquisition system (DAQ)}
 Following a L1A the DAQ receives the information from the different subdetectors split in about 650 data sources, each delivering about 2\,kB of data. These event fragments are assembled into whole events by the event builder. The event is then sent to one filter unit in the event filter, where the HLT software is running. The DAQ has to deal with input rates of up to $\unit{100}{\kilo\hertz}$ and consists of 8 nearly independent slices, each able to take input at a rate of $\unit{12.5}{\kilo\hertz}$. The DAQ includes a back-pressure system, which automatically throttles the L1 trigger in case the input rate exceeds the capability of the DAQ . This introduces dead times in the detector readout but prevents data corruption and buffer overflows. To fully utilise the capacities of the trigger system and the DAQ, trigger thresholds can be adapted during data taking. The shortest time scale on which the thresholds are kept constant is called lumi section and is defined as $2^{20}$ LHC orbits, corresponding to about $\unit{93}{\second}$. The structure of the DAQ is shown in Figure~\ref{fig:L1Daq}.
-\begin{figure}[htbp]
+\begin{figure}[tbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
   \includegraphics[width=\textwidth]{plots/CMS/L1Schema.png}
