--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -1,4 +1,5 @@
 \chapter*{Acknowledgement}
+\addcontentsline{toc}{chapter}{Acknowledgement}
 After three exiting years my work on this thesis is done. It would not have been possible without the help of many people, to all of whom I am very grateful. 
 
 First of all, I would like to thank Prof. Dr. Lutz Feld for giving me the opportunity to work on this interesting topic and for supervising my thesis. In the last three years, I have always profited from his constant support and advise.
@@ -19,4 +20,4 @@ No data analysis is possible without computing infrastructure. Therefore, I am v
 
 Many thanks to all my friends who have accompanied me on my way and provided a much needed balance to my work all this time. Some of them I have known all my life, some I have met along the way, but all are a valuable part of my life. I especially want to thank Sebastian, Klaas, Knut and two Christians for reading this thesis and providing valuable criticism. 
 
-Most of all, I would like to thank my family. My parents have been a great support throughout all my studies, both emotionally and financially, and I am forever grateful to them. I always enjoy being home with them and my sisters and brother. Also I want to thank my grandmother for always believing in my goals and for her great support through the years.  
+Most of all, I would like to thank my family. My parents have been a great support throughout all my studies, both emotionally and financially, and I am forever grateful to them. I always enjoy being home with them and my sisters and brother. Also, I want to thank my grandmother and my late grandfather for always believing in my goals and for their great support throughout the years.  
