--- a/ana.tex
+++ b/ana.tex
@@ -6,7 +6,7 @@ The observables most relevant to this analysis are electrons, muons, jets, and t
 
 \subsection{Vertex reconstruction}
 Interaction vertices are reconstructed from the tracks of the charged particles that originate from them.
-Tracks fulfilling certain quality requirements are clustered into vertices with a deterministic annealing algorithm~\cite{DertermisiticAnnealing,Chatrchyan:2014fea}. The vertex position is fitted using an adaptive vertex fitter~\cite{Fruehwirth:1027031}, where a weight $w_i$ between 0 and 1 is assigned to every track, based on the likelihood of that track being correctly associated with the vertex. These weights are used to asses the quality of the vertex reconstruction. The vertex with the largest $p_\mathrm{T}^2$ sum of associated tracks is considered to be the primary vertex in the event.
+Tracks fulfilling certain quality requirements are clustered into vertices with a deterministic annealing algorithm~\cite{DertermisiticAnnealing,Chatrchyan:2014fea}. The vertex position is fitted using an adaptive vertex fitter~\cite{Fruehwirth:1027031}, where a weight $w_i$ between 0 and 1 is assigned to each track, based on the likelihood of that track being correctly associated with the vertex. These weights are used to asses the quality of the vertex reconstruction. The vertex with the largest $p_\mathrm{T}^2$ sum of associated tracks is considered to be the primary vertex in the event.
 
 \subsection{Muon reconstruction and identification}
 The track of a muon is reconstructed separately in the inner tracker and in the muon system, resulting in a $\textit{tracker track}$ and a $\textit{standalone muon}$. 
@@ -64,7 +64,7 @@ The energy losses in the tracker material also impede the determination of the e
 Electrons are selected requiring \pt larger than $\unit{10}{\giga\electronvolt}$ and $|\eta| < 2.5$. The transition region between ECAL barrel and endcaps of $1.442 < |\eta| < 1.566$ is exluded. To suppress background from muons that radiate photons, electrons with a distance to the nearest $\textit{global}$ or $\textit{tracker muon}$ of less than $\Delta R = 0.1$ are rejected. Backgrounds from for example photon conversions or misidentified charged hadrons are suppressed by a set of selection criteria. The matching of track and supercluster is quantified by the differences between the supercluster position and the parameters of the track extrapolated from the vertex to the ECAL surface in $\Delta\phi$ and $\Delta\eta$. As the energy of the electron is contained in the ECAL, the ratio $H/E$ of hadronic energy deposited in the HCAL behind the electron candidate compared to the energy in the ECAL must be small. The energy spread in the ECAL due to bremsstrahlung occurs in $\phi$ direction. Therefore, no significant spread of the energy in $\eta$, parametrised as
 \begin{eqnarray}
 \sigma_{i\eta i\eta}^2 = \frac{\sum\limits_i^{5\times 5} w_i\cdot \left(\eta_i - \bar{\eta}_{5\times 5}\right)^2}{\sum\limits_{i}^{5\times 5} w_i},\\
-w_i = \max\left(0,4.7 + ln\left(\frac{E_i}{E_{5 \times 5}}\right)\right),
+w_i = \max\left(0,4.7 + \ln\left(\frac{E_i}{E_{5 \times 5}}\right)\right),
 \end{eqnarray}
 is expected, where for $5\times 5$ crystals around the seed crystal, which initiated the clustering, the distance in $\eta$ from the mean $\eta$ of the cluster is summed, weighted by the energy deposit in each crystal. For a well measured electron, there is good agreement between the energy deposited in the ECAL and the track momentum measured in the tracker. Therefore, the value of $\left| \frac{1}{E} - \frac{1}{p}\right|$ must be small. Requirements on the impact parameter of the track with the respect to the vertex are made. To reject electrons originating from converted photons, only one pixel layer with a missing hit is allowed. This suppresses most conversions occurring after the first layer of the pixel detectors. To reject also conversion in this first layer and in the beam pipe, vertex fits for the electron track with neighbouring tracks are performed in order to reconstruct the point of conversion. For a prompt electron, the probability of these fits is low and required to be smaller than $10^{-6}.$ Some of these requirements are already applied on HLT level. In order to select electrons for which the trigger is fully efficient, selections at least as strict are applied at analysis level. The specific requirements are listed in Table~\ref{tab:eleID}, separately for barrel and endcap, where appropriate. 
 \begin{table}
@@ -129,7 +129,7 @@ The $L1$ correction, applied to the raw jet, corrects for offsets due to the und
 
 In this analysis, the \pt of a jet is required to exceed $\unit{40}{\giga\electronvolt}$ and jets are required to lie inside the fiducial volume of the ECAL of $|\eta| < 3.0$. A set of loose quality selections is applied to suppress jets reconstructed because of detector noise, ensuring that the jet is reconstructed in more than one subdetector and has more than one constituent. To prevent an overlap between selected objects, jets within $\Delta R = 0.4$ to leptons identified with the criteria described above are rejected. 
 
-Because of their long lifetime, b-hadrons decay at a measurable distance from their production vertex, allowing for the reconstruction of a secondary vertex. In this analysis the $\textit{combined}$ $\textit{secondary}$ $\textit{vertex}$ (CSV) algorithm is used. Likelihood ratios based on a variety of variables characterizing the secondary vertex and the tracks inside the jet are used to construct a single discriminator. If the value of this discriminator exceeds a given threshold, the jet is tagged as originating from a b-quark~\cite{Chatrchyan:2012jua}. The performance of the b-tagging algorithms have been measured on the dataset recorded at $\sqrt{s} = \unit{8}{\tera\electronvolt}$~\cite{CMS-DP-2013-005}. The average identification efficiency as a function of the discriminator value is shown in Figure~\ref{fig:bTagging} (top). In this analysis, a jet is tagged as a b-jet if the discriminator is larger than 0.679. For this working point the efficiency is about 70\% while the probability to misidentify a jet originating from a light quark as a b-jet is between 1\% and 3\%, depending on the \pt of the jet, as shown in Figure~\ref{fig:bTagging} (bottom). In this analysis b-jets with a \pt larger than $\unit{30}{\giga\electronvolt}$ and $|\eta| < 2.4$ are considered. 
+Because of their long lifetime, b-hadrons decay at a measurable distance from their production vertex, allowing for the reconstruction of a secondary vertex. In this analysis the $\textit{combined}$ $\textit{secondary}$ $\textit{vertex}$ (CSV) algorithm is used. Likelihood ratios based on a variety of variables characterising the secondary vertex and the tracks inside the jet are used to construct a single discriminator. If the value of this discriminator exceeds a given threshold, the jet is tagged as originating from a b-quark~\cite{Chatrchyan:2012jua}. The performance of the b-tagging algorithms have been measured on the dataset recorded at $\sqrt{s} = \unit{8}{\tera\electronvolt}$~\cite{CMS-DP-2013-005}. The average identification efficiency as a function of the discriminator value is shown in Figure~\ref{fig:bTagging} (top). In this analysis, a jet is tagged as a b-jet if the discriminator is larger than 0.679. For this working point the efficiency is about 70\% while the probability to misidentify a jet originating from a light quark as a b-jet is between 1\% and 3\%, depending on the \pt of the jet, as shown in Figure~\ref{fig:bTagging} (bottom). In this analysis b-jets with a \pt larger than $\unit{30}{\giga\electronvolt}$ and $|\eta| < 2.4$ are considered. 
 \begin{figure}[htbp]
 \centering
 
@@ -256,7 +256,7 @@ The hadronisation of colour-charged particles produced in the hard scattering or
 
 The decays of $\tau$ leptons are simulated with the dedicated software Tauola~\cite{Jadach1993361}, which includes polarisation, spin correlations effects and intermediate hadron resonances. 
 
-To simulate the effects of pileup, several proton-proton interactions from a simulated sample containing mostly soft QCD processes are added to the simulated events, including pileup interactions with a time distance with respect to the event of $\unit{\pm50}{\nano\second}$ to emulate the effects of out-of-time pileup. The distribution of the number of additional interactions used in the simulation had to be estimated before the data taking and therefore differs from that observed in the recorded dataset. This effect is corrected for, see section~\ref{sec:inclusiveSelection}.
+To simulate the effects of pileup, several proton-proton interactions from a simulated sample containing mostly soft QCD processes are added to the simulated events, including pileup interactions with a time distance with respect to the event of $\unit{\pm50}{\nano\second}$ to emulate the effects of out-of-time pileup. The distribution of the number of additional interactions used in the simulation had to be estimated before the data taking and therefore differs from that observed in the recorded dataset. This effect is corrected for, as described in section~\ref{sec:inclusiveSelection}.
 
 \subsubsection{Simulation of the detector response}
 A model of the CMS detector has been created using the GEANT4 toolkit~\cite{Agostinelli:2002hh}. It allows for a detailed description of the detector geometry and material budget and simulates the interactions of particles with the detector material. It also models the propagation of the particles inside different materials, taking into account for example the magnetic field inside the CMS solenoid. The energy deposits created by the interactions of the particles with the detector are converted into detector hits on which the full event reconstruction is performed. The simulation also includes modelling of detector noise and dead readout channels.  
@@ -358,7 +358,7 @@ n_{dof} = -3 + 2 \sum\limits_{i=1}^{N_{\text{associated tracks}}} w_i,
 where the $w_i$ are weights assigned to each track based on the likelihood that it is correctly associated with the vertex, is required to be greater than four  
 
 As it relies on the balance of all reconstructed objects, \MET is especially sensitive to detector noise or particles not originating from the proton-proton collisions, which affect the event reconstruction. Several sources of these effects have been identified during the data taking and filters have been developed in CMS to reject events matching their signatures~\cite{CMS-PAS-JME-12-002}. This includes filters for signal produced by interactions of the beam with gas molecules in the beam pipe or of protons in the beam halo with the LHC infrastructure, anomalous noise in the HCAL or ECAL, dead ECAL cells, calibration lasers mistakenly firing during collision events, or failures of the tracking algorithms. The effect of these filters on the tails of the \MET distribution in dijet events is shown in Figure~\ref{fig:METFilters}. Events with \MET larger than $\unit{300}{\giga\electronvolt}$ are dominantly rejected by the filters, greatly improving the agreement between the data and simulation.
-\begin{figure}
+\begin{figure}[h]
 \begin{center}
 \includegraphics[scale=0.15]{plots/SELECTION/METFilter2.png}
 \caption{Distribution of \MET in dijet events in 2012 data. The open data points show all events, while the black points show the data after application of \MET filters. Simulated SM processes are shown as filled histograms~\cite{1748-0221-10-02-P02006}.}
