--- a/background.tex
+++ b/background.tex
@@ -129,7 +129,7 @@ The trigger efficiencies are measured utilizing an event sample collected with t
 \begin{equation*}
 \epsilon_{\ell\ell}^T = \frac{N_{\text{events}}(H_T\text{ trigger} \cap \ell\ell\text{ selection} \cap \ell\ell\text{ trigger})}{N_{\text{events}}(H_T\text{ trigger} \cap \ell\ell\text{ selection})}.
 \end{equation*}
-In case of \MM and OF events, two triggers are used in the event selection. Therefore, their combined efficiency is measured, requiring the logical OR of both. The resulting efficiencies are summarised in Table~\ref{tab:EffValues_Seperated}, separately for the central and forward lepton selections. As discussed in Section~\ref{{sec:trigger}}, the \HT had to be prescaled during the data taking. The efficiencies on simulation are therefore measured with much higher statistical precision, as this prescales are not applied there. The trigger efficiencies for \EE and \MM are about 97\% in both the central and forward selection. The efficiency for OF events is lower, about 95\% in the central and 90\% in the forward selection. This shows how the flavour symmetry is broken at trigger level by the inclusion of the additional dimuon trigger, which recovers efficiency for the trailing muon leg of the trigger and is not present in the OF triggers.   
+In case of \MM and OF events, two triggers are used in the event selection. Therefore, their combined efficiency is measured, requiring the logical OR of both. The resulting efficiencies are summarised in Table~\ref{tab:EffValues_Seperated}, separately for the central and forward lepton selections. As discussed in Section~\ref{sec:trigger}, the \HT triggers had to be prescaled during the data taking. The efficiencies on simulation are therefore measured with much higher statistical precision, as this prescales are not applied there. The trigger efficiencies for \EE and \MM are about 97\% in both the central and forward selection. The efficiency for OF events is lower, about 95\% in the central and 90\% in the forward selection. This shows how the flavour symmetry is broken at trigger level by the inclusion of the additional dimuon trigger, which recovers efficiency for the trailing muon leg of the trigger and is not present in the OF triggers.   
 \input{tab/table_TriggerEffsExclusive_Seperated.tex}
 To assess the systematic uncertainties of the trigger efficiency measurement, potential biases due to the choice of the orthogonal trigger  are studied on simulation, using dileptonic $t\bar{t}$ events. On simulation the efficiency can be measured without the requirement of the \HT triggers, as no trigger is needed to select the events. The ratio of the efficiencies measured with the \HT triggers to those true efficiencies as a function of \mll is shown on the left side of Figure~\ref{fig:triggerEffBias}, separately for SF and OF events. In both cases all deviations from unity are in the order of 0.1\% and well compatible with unity inside the statistical uncertainties. No bias of the efficiency measurement due to the \HT triggers is observed and therefore no systematic uncertainty due to this choice is assigned to the measurement.
 \begin{figure}
@@ -245,7 +245,7 @@ f = \frac{N_{\text{tight}}}{N_{\text{loose}}} (\text{non-prompt sample}),\text{ 
 \end{eqnarray} 
 The fake rate $f$ is calculated on an event sample collected with prescaled low-\pt single lepton triggers (see Section~\ref{sec:trigger}). At least one jet with $\pt > \unit{50}{\giga\electronvolt}$ is required. To reject prompt leptons from \Wjets events, \MET and the transverse mass of the lepton-\MET system are both required to be less than $\unit{20}{\giga\electronvolt}$. The resulting fake rates as a function of lepton \pt and $\eta$ are shown in Figure~\ref{fig:fakeRate}. For low \pt, the value for electrons is about 0.25 while for muons it is about 0.07. Dependencies on both \pt and $\eta$ are observed. The fake rate is therefore measured and applied as a function of both variables. The increase for higher \pt is however understood as arising from an increasing contamination from prompt leptons. Therefore, for all leptons with $\unit{\pt > 40}{\giga\electronvolt}$, the values measured for $\unit{35}{\giga\electronvolt} < \pt < \unit{40}{\giga\electronvolt}$ are used.  
 
-\begin{figure}[htbp]
+\begin{figure}[tbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
   \includegraphics[width=\textwidth]{plots/BG/nonPrompt/fakeRate_ele_Inclusive_Full2012_TrailingPt_range100.pdf}
@@ -265,7 +265,7 @@ The fake rate $f$ is calculated on an event sample collected with prescaled low-
 
 Similarly, to calculate the prompt rate, a sample enriched in prompt lepton is selected by requiring exactly two reconstructed leptons, of which the leading one is required to be a tight lepton, tagging the event as a \Z boson candidate, while the trailing one is a loose lepton. To further enrich the sample in prompt leptons from \Z boson decays, \mll is required to be within $\unit{15}{\giga\electronvolt}$ of the \Z boson mass and \MET is required to be $\unit{<20}{\giga\electronvolt}$. The resulting prompt ratios $p$ are shown in Figure~\ref{fig:promptRate}. They are again derived as functions of \pt and $\eta$. For low \pt they are about 0.85 for muons and 0.9 for electrons and approach values close to one for $\pt > \unit{60}{\giga\electronvolt}$ for both flavours. The systematic uncertainty assigned to the tight-to-loose ratios in the sources cited above is 50\%. As the definition of loose electrons differs from that used in the analyses referred above and modifications have been made to the definition of the control samples in which the ratios are measured, this number is not directly applicable here. However, the overall normalisation of the non-prompt background is not the focus of this study. Therefore no attempt is made to evaluate this uncertainty for this analysis and no systematic uncertainty is quoted. 
 
-\begin{figure}[htbp]
+\begin{figure}[tbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
   \includegraphics[width=\textwidth]{plots/BG/nonPrompt/promptRate_ele_Inclusive_Full2012_TrailingPt_range100.pdf}
@@ -314,7 +314,7 @@ As the fake and prompt rates depend on \pt and $\eta$ of the leptons, in practic
 The contribution of non-prompt leptons is small compared to the total number of tight lepton pairs and the estimates are well compatible between SF and OF events within the statistical uncertainties. This type of backgrounds is therefore accounted for by the background estimates for flavour-symmetric backgrounds.
 
 \section{Drell--Yan backgrounds}
-To estimate the contribution of Drell--Yan backgrounds (see Section~\ref{sec:SMBackgrounds}) to the event sample in the signal region, both the Jet-\Z balance (\JZB) and \MET templates methods~\cite{Chatrchyan:2012qka} are used. They are designed to describe the \MET distribution in this category of backgrounds and focus on the description of the on-Z region. The first studies the balance of \Z boson candidates against the jets in the event. In the \MET template method, the \MET distribution of \gjets events are used to estimate that of \zjets events. As the development and application of these methods have not been part of the work covered in this thesis, only a short description will be given. The reported results are those obtained on the first reconstruction of the dataset published in~\cite{Khachatryan:2015lwa}, corrected for slight differences in event kinematics in the two reconstruction versions. 
+To estimate the contribution of Drell--Yan backgrounds (see Section~\ref{sec:SMBackgrounds}) to the event sample in the signal region, both the Jet-\Z balance (\JZB) and \MET templates methods~\cite{Chatrchyan:2012qka} are used. They are designed to describe the \MET distribution in this category of backgrounds and focus on the description of the on-Z region. The first studies the balance of \Z boson candidates against the jets in the event. In the \MET template method, the \MET distribution of \gjets events are used to estimate that of \zjets events. As the development and application of these methods have not been part of the work covered in this thesis, only a short description will be given. The reported results are those obtained on the first reconstruction of the dataset published in~\cite{Khachatryan:2015lwa}, corrected for slight differences in event kinematics to the reconstruction version used in this analysis. 
 \subsection{JZB method}
 The \JZB variable is defined as the balance of the \pt of the jets in the event with the \pt of the $\Z\rightarrow \ell^{+}\ell^{-}$ candidate. To avoid biases due to jet selection, \METVec is used as a measure of the hadronic recoil of the \Z boson:
 \begin{equation}
