--- a/interpretation.tex
+++ b/interpretation.tex
@@ -1,5 +1,5 @@
 \section{Interpretation in simplified models}
-The absence of a clear indication for the existence of SUSY in the results of the counting experiment presented in Section~\ref{sec:candcresults} constrains the validity of supersymmetric models. To quantify the impact of these results on the allowed parameter space, they are interpreted in specific signal scenarios. Here, the two simplified models discussed in Section~\ref{sec:models} are examined. 
+Despite the moderate excess seen in the results of the counting experiment presented in Section~\ref{sec:counting} and the search for a kinematic edge presented in Section~\ref{sec:fit}, these results constrain the validity of supersymmetric models. To quantify the impact of these results on the allowed parameter space, the results of the counting experiment are interpreted in specific signal scenarios. Here, the two simplified models discussed in Section~\ref{sec:models} are examined. 
 
 \subsubsection{Selection efficiencies}
 The impact of branching fractions, the geometric and kinematic acceptance of the detector, and the efficiencies of the object and event selections presented in Section~\ref{sec:ana} on the different signal points is shown in Figure~\ref{fig:sigEff} for the example of the central signal region for the fixed-edge (left) and slepton-edge (right) models. Because of the much larger branching fraction into lepton pairs in the case of the slepton-edge model, caused by the presence of the slepton in decay chain, the overall acceptance$\times$efficiency is an order of magnitude larger in this case. As the event kinematics vary depending on the sparticle masses, the efficiency strongly depends on the position of the signal point in the $m_{\sbottom}$-$m_{\secondchi}$ plane. In general, the efficiency is low along the diagonal, where little energy is available for the decay products. Another notable feature is a decrease in efficiency around \secondchi masses of about $\unit{225}{\giga\electronvolt}$ in the case of the slepton-edge model. This is caused by the gaps in the signal acceptance between the three invariant mass regions of the counting experiment. No such effect is visible for the fixed-edge case because the signal is concentrated in the low-mass region in this model.  
@@ -58,7 +58,7 @@ The results of the counting experiment are translated into exclusion limits by t
 \label{eq:like}
 \mathcal{L}(\text{data}|\mu,\theta) = \text{Poisson}\left(\text{data}|\mu\cdot s\left(\theta\right) + b\left(\theta\right)\right)\cdot p\left(\tilde{\theta}|\theta\right),
 \end{equation}
-where $\mu$ is the signal strength parameter, $\mu = 0$ corresponding to the background only hypothesis and $\mu > 0$ to the  $s+b$ hypothesis, and $p(\tilde{\theta}|\theta)$ parametrises the systematic uncertainties, which include both the uncertainties on the background and the signal, $\theta$, with $\tilde{\theta}$ being their nominal value. According to the Neyman-Pearson lemma~\cite{NeymanPearson}, a likelihood ratio is the best possible test statistics for the test of two alternative hypotheses, minimizing at the same time the rate of wrongly rejected true hypotheses and accepted false hypotheses. Therefore, on the likelihoods for the $s+b$ and background only hypotheses, a test statistic is defined utilizing a profile likelihood ratio: 
+where $\mu$ is the signal strength parameter, $\mu = 0$ corresponding to the background only hypothesis and $\mu > 0$ to the  $s+b$ hypothesis, and $p(\tilde{\theta}|\theta)$ parametrises the systematic uncertainties, which include both the uncertainties on the background and the signal, $\theta$, with $\tilde{\theta}$ being their nominal value. According to the Neyman-Pearson lemma~\cite{NeymanPearson}, a likelihood ratio is the best possible test statistic for the test of two alternative hypotheses, minimising at the same time the rate of wrongly rejected true hypotheses and accepted false hypotheses. Therefore, using the likelihoods for the $s+b$ and background only hypotheses, a test statistic is defined utilizing a profile likelihood ratio: 
 \begin{equation*}
 \tilde{q_{\mu}} = -2 \ln\frac{\mathcal{L}\left(\text{data}|\mu,\hat{\theta}_\mu\right)}{\mathcal{L}\left(\text{data}|\hat{\mu},\hat{\theta}\right)},
 \end{equation*}
