--- a/intro.tex
+++ b/intro.tex
@@ -10,7 +10,7 @@ The full data sample of proton-proton collisions at a centre-of-mass energy of 8
 
 This work builds upon the previous achievements by Niklas Mohr and Daniel Sprenger in their doctoral theses~\cite{Mohr:1423334,Sprenger:1501963} on earlier datasets and has been performed in part in collaboration with Marco-Andrea Buchmann of ETH Z\"urich~\cite{Buchmann:1704399}. The results of this analysis have been published by the CMS collaboration~\cite{Khachatryan:2015lwa}. Here, an update of the published result is presented, taking into account a later reprocessing of the data sample with improved calibrations. However, the analysis techniques have not been altered and the outcome of the published analysis remains largely unchanged.
 
-This thesis is structured as follows: The remainder of this section is dedicated to the definition of commonly used variables. Section~\ref{sec:theo} discusses the theoretical foundations relevant to the analysis. In Section~\ref{sec:setup} the LHC and the CMS detector are described. The methods used to analyse the recorded data are outlined in Section~\ref{sec:ana} and the estimation of Standard Model backgrounds from data is presented in Section~\ref{sec:backgrounds}. The results of the analysis in the two approaches discussed above are presented in Sections~\ref{sec:counting} and~\ref{sec:fit}. 
+This thesis is structured as follows: The remainder of this section is dedicated to the definition of commonly used variables. Section~\ref{sec:theo} discusses the theoretical foundations relevant to the analysis. In Section~\ref{sec:setup} the LHC and the CMS detector are described. The methods used to analyse the recorded data are outlined in Section~\ref{sec:ana} and the estimation of Standard Model backgrounds from data is presented in Section~\ref{sec:backgrounds}. The results of the analysis in the two approaches discussed above are presented in Sections~\ref{sec:counting} and~\ref{sec:fit}. These results are further examined and interpreted in Section~\ref{sec:newInt}. 
 
 \section{Definition of variables}
 \label{sec:variables}
