--- a/newInterpretation.tex
+++ b/newInterpretation.tex
@@ -1,5 +1,5 @@
 \label{sec:newInt}
-In this chapter, the results of the analysis are studied further. First a more detailed investigation of the properties of the excess at low \mll is conducted. Afterwards, the implications of these results on the  simplified models discussed in section~\ref{sec:models} are examined.
+In this section, the results of the analysis are studied further. First a more detailed investigation of the properties of the excess at low \mll is conducted. Afterwards, the implications of these results on the  simplified models discussed in section~\ref{sec:models} are examined.
 \section{Investigating the excess in the low-mass central region}
 While a significance of $2.2\sigma$ is no clear indication for the presence of new physics, more detailed studies of the properties of this excess are conducted. 
 
@@ -18,9 +18,9 @@ The development of the excess during the data taking period in 2012 is shown on 
 \label{fig:timeDependece}
 \end{figure}
 
-To get a clearer picture of the properties of the excess and also to check for some of the more obvious possible systematic effects that might cause it, the counting experiment in the low-mass central region is repeated several times, varying the selection requirements. As discussed in Section~\ref{sec:eventSel}, the event selection has not been changed significantly after the excess has been observed and in particular had been defined before the studies presented here were performed. The results are shown in Table~\ref{tab:CountingCrosschecks}. As no Drell-Yan prediction for the on-\Z region is available for the different selection configurations, the observed yield in the on-Z region is extrapolated into the low-mass region after subtraction of flavour-symmetric background using the prediction from OF. For the background prediction from OF the \Rsfof factor derived for the default selection is used in all these cross-checks presented here.
+To get a clearer picture of the properties of the excess and also to check for some of the more obvious possible systematic effects that might cause it, the counting experiment in the low-mass central region is repeated several times, varying the selection requirements. As discussed in Section~\ref{sec:eventsel}, the event selection has not been changed significantly after the excess has been observed and in particular had been defined before the studies presented here were performed. The results are shown in Table~\ref{tab:CountingCrosschecks}. As no Drell-Yan prediction for the on-\Z region is available for the different selection configurations, the observed yield in the on-Z region is extrapolated into the low-mass region after subtraction of flavour-symmetric background using the prediction from OF. For the background prediction from OF the \Rsfof factor derived for the default selection is used in all these cross-checks presented here.
 
-As the dominant $t\bar{t}$ background in the signal region produces b-tagged jets, it seems natural to test the excess for its b-tag content. Splitting the data sample into events with at least one and events without a b-tag, it is evident that, while constituting about 23\% of the total yield, less than 10\% of the excess is located in events without a b-tagged jet. 
+As the dominant $t\bar{t}$ background in the signal region produces b-tagged jets, it seems natural to test the excess for its b-tag content. Splitting the data sample into events with at least one and events without a b-tag, it is evident that, while about 23\% of all events contain no b-tagged jets, less than 10\% of the excess is located in this category. Comparing the yields of events with at least one and at least two b-tagged jets, the ratio between the two subsamples is about 2.4 for both the flavour-symmetric backgrounds and the signal. 
 
 In addition to the default selection of $\pt > \unit{20}{\giga\electronvolt}$, four other configurations for the lepton transverse momentum requirement are tested. Three of them feature asymmetric cuts on the \pt of the leading and trailing lepton. The selection of $\pt > 20(10)\GeV$ and $ \pt > 30(10)\GeV$ extend the acceptance of the analysis to lower trailing lepton \pt. For both of these selections, an increased signal yield is observed. On the other hand, raising the trailing \pt threshold to 30\GeV disproportionally reduces the observed excess, retaining only about 13\% of the excess yield compared to 23\% of the overall event yield. 
 
