--- a/results.tex
+++ b/results.tex
@@ -1,8 +1,6 @@
 \label{sec:counting}
-In the counting experiment approach, the observed yield of SF events is compared to the combined background estimates from flavour-symmetric and Drell--Yan backgrounds in the six regions defined in \mll and lepton $|\eta|$. Here, the results are presented their basic properties are discussed.
-\section{Results and further studies}
+In the counting experiment approach, the observed yield of SF events is compared to the combined background estimates from flavour-symmetric and Drell--Yan backgrounds in the six regions defined in \mll and lepton $|\eta|$. Here, the results are presented and their basic properties are discussed.
 
-\label{sec:candcresults}
 The distribution of the dilepton invariant mass in the central and forward signal regions (see Table~\ref{tab:selections}) are shown in Figure~\ref{fig:resultsCC}. The resulting event yields are compared to the expectation from the backgrounds in Table~\ref{tab:METresults2012}. A maximum likelihood estimator for the difference of expected and observed yield is determined in each region. For this purpose, a likelihood function is defined~\cite{HiggsTool1}
 \begin{equation}
 \label{eq:ML}
@@ -23,7 +21,7 @@ where $s$ and $b$ represent the number of signal and background events, and $p(\
 \end{figure} 
 
 \input{tab/table_cutNCount_Result_SF.tex}
-In Tables~\ref{tab:METresults2012EE} and~\ref{tab:METresults2012MM}, the results are shown separately for \EE and \MM events. As expected since \rmue is larger than one, the yields in the \MM channel are slightly larger than those in the \EE channel. For the flavour-symmetric backgrounds, and therefore also for the total background estimates and the difference of observation and estimation, the yields in the \EE and \MM channels do not exactly add up to those in the combined SF channel presented in Table~\ref{tab:METresults2012}. This is caused by the weighted average of the two methods to determine the correction factors used to translate from OF into the different SF channels, which is calculated separately for \Rsfof, \Reeof, and \Rmmof, as discussed in Section~\ref{sec:combinedRSFOF}. Comparing the two channels, consistent results are observed between them, except for the slight excess in the high-mass central region, which is dominated by \EE events. Especially for the larger excess in the low-mass central region, the observation agrees with the expected behaviour of the different flavours. The signal yields of $47\pm25$ and $67\pm29$ in the \EE and \MM channels correspond to a value of \rmue for this hypothetical signal of $1.19\pm0.41$, in good agreement with the value of $1.09\pm0.11$ measured in the Drell--Yan control region (see Section~\ref{sec:rmue}). However, to explain the observed excess with a value of \Rsfof = 1.17 with a change in the lepton efficiencies, an \rmue of about 1.7 is necessary, as illustrated in Figure~\ref{fig:rmuePropaganda}. A further discussion of these results can be found in Chapter~\ref{sec:newInt}.
+In Tables~\ref{tab:METresults2012EE} and~\ref{tab:METresults2012MM}, the results are shown separately for \EE and \MM events. As expected since \rmue is larger than one, the yields in the \MM channel are slightly larger than those in the \EE channel. For the flavour-symmetric backgrounds, and therefore also for the total background estimates and the difference of observation and estimation, the yields in the \EE and \MM channels do not exactly add up to those in the combined SF channel presented in Table~\ref{tab:METresults2012}. This is caused by the weighted average of the two methods to determine the correction factors used to translate from OF into the different SF channels, which is calculated separately for \Rsfof, \Reeof, and \Rmmof, as discussed in Section~\ref{sec:combinedRSFOF}. Comparing the two channels, consistent results are observed between them, except for the slight excess in the high-mass central region, which is dominated by \EE events. Especially for the larger excess in the low-mass central region, the observation agrees with the expected behaviour of the different flavours. The signal yields of $47\pm25$ and $67\pm29$ in the \EE and \MM channels correspond to a value of \rmue for this hypothetical signal of $1.19\pm0.41$, in good agreement with the value of $1.09\pm0.11$ measured in the Drell--Yan control region (see Section~\ref{sec:rmue}). However, to explain the observed excess with a change in the lepton efficiencies, an \rmue of about 1.7 would be necessary to achieve the observed value of  \Rsfof of 1.17, as illustrated in Figure~\ref{fig:rmuePropaganda}. A further discussion of these results can be found in Section~\ref{sec:newInt}.
 \input{tab/table_cutNCount_Result_EE.tex}
 
 \input{tab/table_cutNCount_Result_MM.tex}
