--- a/theory.tex
+++ b/theory.tex
@@ -1,4 +1,4 @@
-The Standard Model (SM) of particle physics is a highly successful, commonly accepted description of the fundamental particles and their interactions and at the same time subject to several shortcomings, motivating the search for signs of new phenomena beyond its scope. In this chapter a short overview of the SM and its shortcoming is given. Supersymmetry is presented as an attractive candidate for the extension of the SM and the phenomenological consequences of its existence relevant to this analysis are discussed. 
+The Standard Model (SM) of particle physics is a highly successful, commonly accepted description of the fundamental particles and their interactions and at the same time subject to several shortcomings, motivating the search for signs of new phenomena beyond its scope. In this section a short overview of the SM and its shortcoming is given. Supersymmetry is presented as an attractive candidate for the extension of the SM and the phenomenological consequences of its existence relevant to this analysis are discussed. 
 \label{sec:theo}
 \section{The Standard Model of particle physics}
 The SM describes the fundamental particles in the framework of a renormalisable quantum field theory, in which each particle is represented by one quantum field~\cite{Glashow1961579,Salam1964168,PhysRevLett.19.1264,PhysRevD.5.1412}. Two fundamental classes of particles are distinguished, bosons with integer spin and fermions with half-integer spin. 
@@ -34,7 +34,7 @@ The group structure of the SM is $SU(3)_C \times SU(2)_L \times U(1)_Y$. The $SU
 
 The subgroup $SU(2)_L \times U(1)_Y$ describes the unification of weak and electromagnetic interactions in the electroweak theory. The index $L$ indicates that the weak isospin $T$ couples only to left-handed particles. $Y$ is the weak hypercharge. The $SU(2)_L$ introduces three vector fields, of which two mix to the observed $\W^{\pm}$ = $\frac{1}{\sqrt{2}}(\W^1\mp i\W^2)$. The remaining neutral $\W^3$ mixes with the $\mathrm{B}^0$ arising from the $U(1)_Y$ group to form the photon and \Z boson~\cite{HalzenMartin}.
 
-To give masses to the particles, the Higgs mechanism is introduced~\cite{PhysRevLett.13.508,PhysRevLett.13.321,PhysRevLett.13.585}. It postulates a complex scalar doublet that spontaneously breaks the $SU(2)_L \times U(1)_Y$ gauge symmetry, allowing to give masses to the electro-weak gauge bosons while the photon remains massless. Fermions acquire mass through a Yukawa coupling to the Higgs field. The Higgs mechanism results in the presence of a massive neutral scalar boson. The discovery of such a particle with a mass of $\unit{125.09\pm0.24}{\giga\electronvolt}$~\cite{Aad:2015zhl} by the CMS and ATLAS collaborations at the LHC in 2012~\cite{Chatrchyan:2012ufa,Aad:2012tfa} and the good agreement of its properties with the prediction of the SM~\cite{Khachatryan:2014jba} provides evidence for the validity of this theory.   
+To give masses to the particles, the Higgs mechanism is introduced~\cite{PhysRevLett.13.508,PhysRevLett.13.321,PhysRevLett.13.585}. It postulates a complex scalar doublet that spontaneously breaks the $SU(2)_L \times U(1)_Y$ gauge symmetry, allowing to give masses to the electro-weak gauge bosons while the photon remains massless. Fermions acquire mass through a Yukawa coupling to the Higgs field. The Higgs mechanism results in the presence of a massive neutral scalar boson. The discovery of such a particle with a mass of $\unit{125.09\pm0.24}{\giga\electronvolt}$~\cite{Aad:2015zhl} by the CMS and ATLAS collaborations at the LHC in 2012~\cite{Chatrchyan:2012ufa,Aad:2012tfa} and the good agreement of its properties with the prediction of the SM~\cite{Khachatryan:2014jba} provide evidence for the validity of this theory.   
 
 \subsection*{Shortcomings of the Standard Model}
 The discovery of the Higgs boson is a large success for the SM, and only the last in a long series of experimental results supporting the decades old theory. However, for a long time also the shortcomings of the SM have been known. Here only those most relevant to the motivation of Supersymmetry are discussed.
@@ -135,9 +135,9 @@ The mass difference between the two neutralinos sets an upper bound on the invar
 \begin{equation}
 \mlledge = m_{\secondchi} - m_{\firstchi}.
 \end{equation}
-If the decay is mediated by a slepton, the edge position is modified by the slepton mass $m_{\tilde{\ell}}$:
+If the decay is mediated by a slepton, the edge position is modified by the slepton mass $m_{\tilde{\ell}}$~\cite{PhysRevD.55.5520}:
 \begin{equation}
-\mlledge = \sqrt{\frac{(m_{\secondchi}^2-m_{\tilde{\ell}}^2)(m_{\tilde{\ell}}^2-m_{\firstchi}^2)}{m_{\tilde{\ell}}^2}}~\cite{PhysRevD.55.5520}. 
+\mlledge = \sqrt{\frac{(m_{\secondchi}^2-m_{\tilde{\ell}}^2)(m_{\tilde{\ell}}^2-m_{\firstchi}^2)}{m_{\tilde{\ell}}^2}}. 
 \end{equation}
 For decays via an on-shell \Z boson, \mll will be consistent with the \Z boson mass and no edge structure is present. The exact shape of the distribution is also determined by the decays. If the decays are mediated by \Z bosons, it will be peaked towards $m_{\Z}$ if \mlledge is below the \Z boson mass. For \mlledge on and above $m_{\Z}$, the decays via an on-shell \Z boson dominate and there is no edge. Decays via an intermediate slepton lead to triangular edge shapes, but the actual shape depends on model parameters, as for example negative interference between the decay channels via slepton and \Z boson can occur~\cite{Nojiri:1999ki}. Examples are given in the next section.
 \subsubsection{Simplified models}
