--- a/tab/table_cutNCount_FlavSymBkgs.tex
+++ b/tab/table_cutNCount_FlavSymBkgs.tex
@@ -5,7 +5,7 @@
  \small
  \centering
  \caption{Resulting estimates for flavour-symmetric backgrounds in data. Given is the observed event yield in \EM events and the resulting estimate after applying the correction, seperately for the SF, \EE, and \MM channels. Statistical and systematic uncertainties are given separately.
-     Low-mass refers to $20 < \mll < 70$\GeV, on-\Z to  $81 < \mll < 101$\GeV and high-mass to $\mll > 120$\GeV.
+     Low-mass refers to $20\GeV < \mll < 70$\GeV, on-\Z to  $81\GeV < \mll < 101$\GeV and high-mass to $\mll > 120$\GeV.
      }
   \label{tab:FlavSymBackgrounds}
   \begin{tabular}{l| cc | cc | cc}
