--- a/tab/table_cutNCount_Result_MM.tex
+++ b/tab/table_cutNCount_Result_MM.tex
@@ -1,11 +1,11 @@
 
-\begin{table}[hbtp]
+\begin{table}[btp]
  \renewcommand{\arraystretch}{1.3}
  \setlength{\belowcaptionskip}{6pt}
  \scriptsize
  \centering
  \caption{Results of the counting experiment for \MM events only.
-     The statistical and systematic uncertainties are added in quadrature, except for the flavor-symmetric backgrounds. The presented differences between the observed and estimated yields are obtained with a maximum likelihood fit (see text).    Low-mass refers to $20 < \mll < 70$\GeV, on-\Z to  $81 < \mll < 101$\GeV, and high-mass to $\mll > 120$\GeV.
+     The statistical and systematic uncertainties are added in quadrature, except for the flavor-symmetric backgrounds. The presented differences between the observed and estimated yields are obtained with a maximum likelihood fit (see text).    Low-mass refers to $20\GeV < \mll < 70$\GeV, on-\Z to  $81\GeV < \mll < 101$\GeV, and high-mass to $\mll > 120$\GeV.
      }
   \label{tab:METresults2012MM}
   \begin{tabular}{l| cc | cc | cc}
