--- a/thesis.tex
+++ b/thesis.tex
@@ -2,7 +2,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Grundlegende Einstellungen
-\documentclass[fontsize=11pt,openright,paper=a4,pointlessnumbers]{scrbook}
+\documentclass[fontsize=11pt,openright,paper=a4,pointlessnumbers,bibtotoc]{scrbook}
 \usepackage[bottom=3.0cm, left=3.0cm, right=3.0cm]{geometry} 
 \usepackage[squaren, thinspace ,thinqspace,binary]{SIunits}
 \usepackage[latin2]{inputenc}
@@ -37,6 +37,13 @@
 \makesavenoteenv{table}
 
 \usepackage{mathtools}
+
+
+
+
+
+
+
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}%
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}%
